moodle/deploymentmoodle.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moodle
  template:
    metadata:
      labels:
        app: moodle
    spec:
      containers:
        - name: moodle
          image: docker.io/bitnami/moodle:4.4
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 443
          volumeMounts:
            - name: moodle-data
              mountPath: /bitnami/moodle
            - name: moodledata-data
              mountPath: /bitnami/moodledata
      volumes:
        - name: moodle-data
          persistentVolumeClaim:
            claimName: moodle-pvc
        - name: moodledata-data
          persistentVolumeClaim:
            claimName: moodledata-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: moodle
spec:
  selector:
    app: moodle
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  type: ClusterIP
