moodle/ingressmoodle.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moodle-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - training-eucaim.grycap...
      secretName: moodle-tls
  rules:
    - host: training-eucaim.grycap...
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: moodle
                port:
                  number: 8080
